implement the very basic version of the login system

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Secure Login System</title>
-  </head>
-  <body>
-    <h1>This is my secure login system</h1>
-    <h3>Hi, this is: <%= name %></h3>
-  </body>
-</html>
+<h1>Wellcome back: <%= name %></h1>
+<form action="/logout?_method=DELETE" method="POST">
+  <button type="submit">Log Out</button>
+</form>
