--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -1,19 +1,17 @@
 <h1>Register</h1>
-
 <form action="/register" method="POST">
   <div>
     <label for="name">Name</label>
-    <input type="text" name="name" id="name" required />
+    <input type="text" id="name" name="name" required>
   </div>
   <div>
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" required />
+    <input type="email" id="email" name="email" required>
   </div>
   <div>
     <label for="password">Password</label>
-    <input type="password" name="password" id="password" required />
+    <input type="password" id="password" name="password" required>
   </div>
   <button type="submit">Register</button>
 </form>
-
-<a href="/login">Go Login</a>
+<a href="/login">Login</a>
