path of the images for github

--- a/src/components/left-side/left-side.scss
+++ b/src/components/left-side/left-side.scss
@@ -1,6 +1,6 @@
 .left-side__main {
   width: 40%;
-  background-image: url("assets/images/container.jpg");
+  background-image: url("/assets/images/container.jpg");
   background-position-x: 510px;
   background-position-y: 410px;
   background-size: 300%;
