--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url("assets/images/body.png");
+  background-image: url("/assets/images/body.png");
   background-size: cover;
   background-attachment: fixed;
 }
